fix: Remove duplication text-align declaration

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -549,6 +549,7 @@ progress {
 	padding: var(--responsive-space--medium);
 	font-size: 0.8rem;
 	color: white;
+	text-align: center;
 }
 
 .sunday-service__card--1 {
@@ -556,7 +557,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__card--2 {
@@ -564,7 +564,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__card--3 {
@@ -572,7 +571,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__card--4 {
@@ -580,7 +578,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__card--5 {
@@ -588,7 +585,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__card--6 {
@@ -596,7 +592,6 @@ progress {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	text-align: center;
 }
 
 .sunday-service__title,
